--- a/KurtPortfolio/index.html
+++ b/KurtPortfolio/index.html
@@ -15,6 +15,8 @@
 <br>
 
 <button id = "loginbutton">Login</button>
+
+<p>Don't have an account? <a href = src/pages/Signup.html> Signup here</a></p>
 <script type = "module" src = "/src/logic/main.js"></script>
 </body>
 </html>
