Fixed hrefs, not nesting anymore.

--- a/KurtPortfolio/index.html
+++ b/KurtPortfolio/index.html
@@ -16,7 +16,7 @@
 
 <button id = "loginbutton">Login</button>
 
-<p>Don't have an account? <a href = src/pages/Signup.html> Signup here</a></p>
+<p>Don't have an account? <a href = "/src/pages/Signup.html"> Signup here</a></p>
 <script type = "module" src = "/src/logic/main.js"></script>
 </body>
 </html>
