--- a/KurtPortfolio/src/pages/Signup.html
+++ b/KurtPortfolio/src/pages/Signup.html
@@ -14,6 +14,8 @@
 <br>
 <br>
 <button id = "signupbutton">Sign up</button>
+
+<p>Already have an account? <a href = "index.html">Login here</a></p>
 <script type = "module" src = "/src/logic/signup.js"></script>
 </body>
 </html>
